--- a/templates/main/visit.html.twig
+++ b/templates/main/visit.html.twig
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row pt-4">
         <div class="col">
-            <span class="text-result float-left">{{ 'visit.result'|trans({count: paginator|length })|raw }}</span>
+            <span class="text-result float-left">{{ 'visit.result'|trans({count: tot_profile })|raw }}</span>
         </div>
     </div>
     <hr>
