--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -116,7 +116,7 @@
         <span class="col-text-profile"><i class="fas fa-eye"></i> Nouvelles visites</span>
       </div>
       <div class="col-3">
-        {% if new_visit > 0 %}<a href="{{ path('show_visit') }}">{% endif %}
+        {% if new_visit > 0 %}<a href="{{ path('show_visits') }}">{% endif %}
         <span class="col-text-profile float-right badge badge-blue">
           {{ '%02d'|format(new_visit) }}
         </span>
@@ -129,7 +129,7 @@
         <span class="col-text-profile"><i class="fas fa-user-plus"></i> Nouvelles Sollicitations</span>
       </div>
       <div class="col-3">
-        {% if new_request > 0 %}<a href="{{ path('show_visit') }}">{% endif %}
+        {% if new_request > 0 %}<a href="{{ path('show_solicitations') }}">{% endif %}
           <span class="col-text-profile float-right badge badge-blue">
             {{ '%02d'|format(new_request) }}
           </span>
