add json error message for list of profiles

--- a/templates/partials/_listProfile.html.twig
+++ b/templates/partials/_listProfile.html.twig
@@ -147,3 +147,6 @@
 <input type="hidden" id="badgeText" data-connection="{{ 'connection.requested'|trans|raw }}">
 {# input to transfer dropdown item text to javascript #}
 <input type="hidden" id="dropItemText" data-delrelation="{{ 'delete.relation'|trans|raw }}">
+{# error message for json request #}
+<input type="hidden" id="msgerr" data-errone = "{{ 'list.profile.msg.error_1'|trans|raw }}"
+data-errtwo = "{{ 'list.profile.msg.error_2'|trans|raw }}"/>
